k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schrecknet
  namespace: schrecknet
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["schreck-net.com"]
      secretName: schrecknet-tls
  rules:
    - host: schreck-net.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schrecknet-server
                port:
                  number: 80
